--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3>O número secreto esta entre <span id="menor-valor">0</span> e 
         <span id="maior-valor">100</span></h3>
 
-        <div id="id" class="mensagem">
+        <div id="chute" class="mensagem">
             
             
         </div>
